# Aether

./: PROJECT_AETHER_BLUEPRINT.md  README.md  TECH_SPEC.md  project_legacy.json  pyproject.toml  requirements.txt  trace_report.json
aether/agents/alpha/: base.py  optimizer.py
aether/agents/omega/: base.py  evaluator.py
aether/agents/sigma/: base.py  monitor.py  vision.py
aether/cmd/: main.py
aether/config/: models.py  setup.py
aether/core/: graph.py  outcome.py  self_heal.py  state.py
aether/memory/: graphiti_v2.py  synthesis.py
aether/spec/: tir.py
aether/transport/: mcp_bridge.py
