[project]
name = "project-aether"
version = "2026.1.0"
description = "Autonomous Engineering & Temporal Health Evaluation Resource"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.35",      # Stateful Agentic Loops
    "graphiti-sdk>=1.2.0",    # Temporal Knowledge Graph
    "mcp>=0.12.0",            # Model Context Protocol
    "langfuse>=2.0.0",        # Deep Tracing
    "arize-phoenix>=4.0.0",   # Observability & Evaluations
    "pydantic>=2.10.0",       # Data Validation
    "rich>=13.9.0",           # Terminal UI
    "psutil>=6.1.0",          # Resource Guard (TIR)
    "instructor>=1.6.0",      # Structured Outputs
    "networkx>=3.4.0",        # Graph Analysis for OMEGA
    "google-genai>=1.0.0",    # LLM Intelligence for ALPHA
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-mistralai",
    "langchain-ollama",
    "langchain-community",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aether*"]
